--- a/src/data_collection.ipynb
+++ b/src/data_collection.ipynb
@@ -48,7 +48,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_35098/2140728767.py:1: DtypeWarning: Columns (0,1,2,3,4,5,8,9,13,16,18,22,25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_45278/2140728767.py:1: DtypeWarning: Columns (0,1,2,3,4,5,8,9,13,16,18,22,25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(\"data/export.csv\")\n"
      ]
     },
@@ -1603,25 +1603,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_35098/4277686047.py:4: SettingWithCopyWarning: \n",
+      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_45278/4277686047.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['startDate'] = pd.to_datetime(data['startDate'])\n",
-      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_35098/4277686047.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_45278/4277686047.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['endDate'] = pd.to_datetime(data['endDate'])\n",
-      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_35098/4277686047.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_45278/4277686047.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['SleepPhaseDuration'] = data.apply(calculate_sleep_time, axis=1)\n",
-      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_35098/4277686047.py:17: SettingWithCopyWarning: \n",
+      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_45278/4277686047.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2100,7 +2100,7 @@
    "id": "21ecf0fd",
    "metadata": {},
    "source": [
-    "### Adding 'SleepDuration' and 'TimeOnBed' columns to the dataframe"
+    "### Adding 'SleepDuration' and 'SleepPhaseDuration' columns to the dataframe"
    ]
   },
   {
@@ -3543,8 +3543,142 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02340bf9",
+   "metadata": {},
+   "source": [
+    "### Add variables sleep_onset(It's true on the time the user starts sleeping) and is_sleeping"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "f5571ccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most common sleep onset hour: 23\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_45278/758836313.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['time'] = pd.to_datetime(df['time'])\n",
+      "/Users/eliandromelo/miniconda3/lib/python3.12/site-packages/pandas/core/arrays/timedeltas.py:908: RuntimeWarning: invalid value encountered in cast\n",
+      "  base = data.astype(np.int64)\n",
+      "/Users/eliandromelo/miniconda3/lib/python3.12/site-packages/pandas/core/arrays/timedeltas.py:912: RuntimeWarning: invalid value encountered in cast\n",
+      "  data = (base * m + (frac * m).astype(np.int64)).view(\"timedelta64[ns]\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Ensure 'time' column is datetime\n",
+    "df['time'] = pd.to_datetime(df['time'])\n",
+    "df = df.sort_values('time')\n",
+    "\n",
+    "# Define valid sleep phases from HealthKit-style labels\n",
+    "real_sleep_phases = [\n",
+    "    'HKCategoryValueSleepAnalysisAsleepREM',\n",
+    "    'HKCategoryValueSleepAnalysisAsleepCore',\n",
+    "    'HKCategoryValueSleepAnalysisAsleepDeep'\n",
+    "]\n",
+    "\n",
+    "# Mark rows that are real sleep phases\n",
+    "df['is_sleeping'] = df['SleepAnalysis'].isin(real_sleep_phases)\n",
+    "\n",
+    "# Detect sleep onset: awake -> sleeping\n",
+    "df['sleep_onset'] = (df['is_sleeping'] & ~df['is_sleeping'].shift(1).fillna(False))\n",
+    "\n",
+    "# Create sleep_midpoint feature\n",
+    "df['sleep_midpoint'] = df['sleep_onset'] + pd.to_timedelta(df['TotalSleepDuration'] / 2, unit='h')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Extract onset times\n",
+    "sleep_onset_times = df[df['sleep_onset']]['time']\n",
+    "\n",
+    "# Get most common sleep onset hour\n",
+    "most_common_sleep_hour = sleep_onset_times.dt.hour.mode().iloc[0]\n",
+    "print(\"Most common sleep onset hour:\", most_common_sleep_hour)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bd0eb99",
+   "metadata": {},
+   "source": [
+    "### Creating the target 'CircadianPhase'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "921f4518",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify_biological_phase(row):\n",
+    "    # Get the sleep midpoint as timedelta (time of day)\n",
+    "    midpoint = row['sleep_midpoint']\n",
+    "    \n",
+    "    # Convert current time to datetime and extract time of day as timedelta\n",
+    "    now = pd.to_datetime(row['time'])\n",
+    "    now_time_of_day = pd.Timedelta(hours=now.hour, minutes=now.minute, seconds=now.second)\n",
+    "    \n",
+    "    # Calculate 6-hour window around midpoint\n",
+    "    start = midpoint - pd.Timedelta(hours=6)\n",
+    "    end = midpoint + pd.Timedelta(hours=6)\n",
+    "    \n",
+    "    # Handle day boundary crossings\n",
+    "    if start < pd.Timedelta(0):\n",
+    "        # Window crosses midnight backwards (e.g., 22:00 to 10:00)\n",
+    "        start += pd.Timedelta(days=1)\n",
+    "        if now_time_of_day >= start or now_time_of_day <= end:\n",
+    "            return 'WindingDown'\n",
+    "        else:\n",
+    "            return 'RisingUp'\n",
+    "    elif end >= pd.Timedelta(days=1):\n",
+    "        # Window crosses midnight forwards (e.g., 20:00 to 08:00)\n",
+    "        end -= pd.Timedelta(days=1)\n",
+    "        if now_time_of_day >= start or now_time_of_day <= end:\n",
+    "            return 'WindingDown'\n",
+    "        else:\n",
+    "            return 'RisingUp'\n",
+    "    else:\n",
+    "        # Normal case - window doesn't cross midnight\n",
+    "        if start <= now_time_of_day <= end:\n",
+    "            return 'WindingDown'\n",
+    "        else:\n",
+    "            return 'RisingUp'\n",
+    "\n",
+    "# Apply the function\n",
+    "df['CircadianPhase'] = df.apply(classify_biological_phase, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a91e8ce7",
+   "metadata": {},
+   "source": [
+    "### Saving the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "761a6758",
    "metadata": {},
    "outputs": [],
