--- a/src/eda_manual.ipynb
+++ b/src/eda_manual.ipynb
@@ -64,6 +64,10 @@
        "      <th>StepCount</th>\n",
        "      <th>TotalSleepDuration</th>\n",
        "      <th>SleepPhaseDuration</th>\n",
+       "      <th>is_sleeping</th>\n",
+       "      <th>sleep_onset</th>\n",
+       "      <th>sleep_midpoint</th>\n",
+       "      <th>CircadianPhase</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -85,6 +89,10 @@
        "      <td>114.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -104,6 +112,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -123,6 +135,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -142,6 +158,10 @@
        "      <td>16.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -161,9 +181,17 @@
        "      <td>31.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -199,6 +227,10 @@
        "      <td>NaN</td>\n",
        "      <td>5.441667</td>\n",
        "      <td>0.755556</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0 days 02:43:14.999998801</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22720</th>\n",
@@ -218,6 +250,10 @@
        "      <td>156.0</td>\n",
        "      <td>5.441667</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0 days 02:43:14.999998800</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22721</th>\n",
@@ -237,6 +273,10 @@
        "      <td>258.0</td>\n",
        "      <td>5.441667</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0 days 02:43:14.999998800</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22722</th>\n",
@@ -256,6 +296,10 @@
        "      <td>NaN</td>\n",
        "      <td>5.441667</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0 days 02:43:14.999998800</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22723</th>\n",
@@ -275,10 +319,14 @@
        "      <td>NaN</td>\n",
        "      <td>5.441667</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0 days 02:43:14.999998800</td>\n",
+       "      <td>RisingUp</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>22724 rows × 16 columns</p>\n",
+       "<p>22724 rows × 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -347,20 +395,33 @@
        "22722               NaN             1.4              NaN        NaN   \n",
        "22723               NaN             NaN              NaN        NaN   \n",
        "\n",
-       "       TotalSleepDuration  SleepPhaseDuration  \n",
-       "0                     NaN                 NaN  \n",
-       "1                     NaN                 NaN  \n",
-       "2                     NaN                 NaN  \n",
-       "3                     NaN                 NaN  \n",
-       "4                     NaN                 NaN  \n",
-       "...                   ...                 ...  \n",
-       "22719            5.441667            0.755556  \n",
-       "22720            5.441667                 NaN  \n",
-       "22721            5.441667                 NaN  \n",
-       "22722            5.441667                 NaN  \n",
-       "22723            5.441667                 NaN  \n",
+       "       TotalSleepDuration  SleepPhaseDuration  is_sleeping  sleep_onset  \\\n",
+       "0                     NaN                 NaN        False        False   \n",
+       "1                     NaN                 NaN        False        False   \n",
+       "2                     NaN                 NaN        False        False   \n",
+       "3                     NaN                 NaN        False        False   \n",
+       "4                     NaN                 NaN        False        False   \n",
+       "...                   ...                 ...          ...          ...   \n",
+       "22719            5.441667            0.755556         True         True   \n",
+       "22720            5.441667                 NaN        False        False   \n",
+       "22721            5.441667                 NaN        False        False   \n",
+       "22722            5.441667                 NaN        False        False   \n",
+       "22723            5.441667                 NaN        False        False   \n",
        "\n",
-       "[22724 rows x 16 columns]"
+       "                  sleep_midpoint CircadianPhase  \n",
+       "0                            NaN       RisingUp  \n",
+       "1                            NaN       RisingUp  \n",
+       "2                            NaN       RisingUp  \n",
+       "3                            NaN       RisingUp  \n",
+       "4                            NaN       RisingUp  \n",
+       "...                          ...            ...  \n",
+       "22719  0 days 02:43:14.999998801       RisingUp  \n",
+       "22720  0 days 02:43:14.999998800       RisingUp  \n",
+       "22721  0 days 02:43:14.999998800       RisingUp  \n",
+       "22722  0 days 02:43:14.999998800       RisingUp  \n",
+       "22723  0 days 02:43:14.999998800       RisingUp  \n",
+       "\n",
+       "[22724 rows x 20 columns]"
       ]
      },
      "execution_count": 2,
@@ -938,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "48cb21a7",
    "metadata": {},
    "outputs": [
@@ -954,6 +1015,7 @@
     }
    ],
    "source": [
+    "df['time'] = pd.to_datetime(df['time'])\n",
     "# Extract hour from the time column\n",
     "df['hour'] = df['time'].dt.hour\n",
     "\n",
@@ -977,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "dbbbaa36",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "32e48f25",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1089,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_35832/2962329661.py:36: FutureWarning: \n",
+      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_45699/2962329661.py:36: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1048,7 +1110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_35832/2962329661.py:36: FutureWarning: \n",
+      "/var/folders/j6/hnb1wkw115x3893s7581k7s40000gn/T/ipykernel_45699/2962329661.py:36: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
